kubernetes/azure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: ingress
spec:
  rules:
    - host: weflat.westeurope.cloudapp.azure.com
      http:
        paths:
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: server-svc
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-svc
              port:
                number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - weflat.westeurope.cloudapp.azure.com
    secretName: tls-secret
